--- a/areas/arm64/board_nxp_ls1088/nxp-board04-troubleshoot-qdisc.org
+++ b/areas/arm64/board_nxp_ls1088/nxp-board04-troubleshoot-qdisc.org
@@ -256,3 +256,29 @@ NOTICE XXX  ^^^^^^^^^^^^^^^^^^^^
 
 This is driver related, because (deep) TC init code-path calls
 =ndo_setup_tc=, which calls driver =dpaa2_eth_setup_tc()=.
+
+* Analyzing code
+
+** Blaming driver dpaa2-eth.c code: dpaa2_eth_setup_tc
+
+Ftrace session identified driver function:
+- [[https://elixir.bootlin.com/linux/v5.6/source/drivers/net/ethernet/freescale/dpaa2/dpaa2-eth.c#L2007][dpaa2_eth_setup_tc]]
+
+Look at the code, it is clear that this will only work for =mqprio= qdisc:
+#+begin_src C
+static int dpaa2_eth_setup_tc(struct net_device *net_dev,
+			      enum tc_setup_type type, void *type_data)
+{
+	struct dpaa2_eth_priv *priv = netdev_priv(net_dev);
+	struct tc_mqprio_qopt *mqprio = type_data;
+	u8 num_tc, num_queues;
+	int i;
+
+	if (type != TC_SETUP_QDISC_MQPRIO)
+		return -EINVAL;
+[... cut ...]
+#+end_src
+
+This code was introduced in kernel v5.3 (specifically [[https://git.kernel.org/torvalds/c/v5.3-rc1~140^2~271^2][v5.3-rc1~140^2~271^2]])
+- commit: [[ https://git.kernel.org/torvalds/c/ab1e6de2bd49][ab1e6de2bd49]] ("dpaa2-eth: Add mqprio support") (Author: Ioana Radulescu)
+
