--- a/areas/core/BTF_01_notes.org
+++ b/areas/core/BTF_01_notes.org
@@ -166,16 +166,32 @@ struct {
 
 Trying to debug what kernel function call that returns this error.
 
+Using =strace= it is easy trace all BPF syscalls (=-e trace=bpf=) and then
+filter to the ones that fails (=--failed-only or -Z=):
+
+#+begin_example
+sudo strace -e trace=bpf --failed-only ./xdp_redirect_cpu -F --dev mlx5p1 --q 1024 --cpu 4 --prog xdp_cpu_map0 
+bpf(BPF_MAP_CREATE, {map_type=BPF_MAP_TYPE_CPUMAP, key_size=4, value_size=4, max_entries=8192, map_flags=0, inner_map_fd=0, map_name="cpu_map", map_ifindex=0, btf_fd=3, btf_key_type_id=7, btf_value_type_id=27, btf_vmlinux_value_type_id=0}, 120) = -1 ENOTSUPP (Unknown error 524)
+libbpf: Error in bpf_create_map_xattr(cpu_map):ERROR: strerror_r(-524)=22(-524). Retrying without BTF.
+#+end_example
+
+It shows what we already knows, that =BPF_MAP_CREATE= fails with error
+code 524. This errno is defined as =ENOTSUPP=, and is part of the kernels
+internal errno in file [[https://github.com/torvalds/linux/blob/master/include/linux/errno.h][include/linux/errno.h]]. As is stated in the file,
+these "should never be seen by user programs."
+
+#+begin_example
+#define ENOTSUPP        524     /* Operation is not supported */
+#+end_example
+
+What we really wanted was to identify and record the kernel functions
+involved to figure out what kernel function fails.
+
 The BPF tracepoint were removed in commit 4d220ed0f814 ("bpf: remove
 tracepoints from bpf core") (Author: Alexei Starovoitov). This makes it
 harder debug and isolate 'map_create' function call (as it get inlined).
 
-
-
-#+begin_example
- perf trace record -o /tmp/perf.data -e syscalls:sys_enter_bpf \
-  ./xdp_redirect_cpu -F --dev mlx5p1 --q 1024 --cpu 4 --prog xdp_cpu_map0
-#+end_example
+*** Using ftrace and trace-cmd
 
 Finding BPF syscall to ftrace:
 #+begin_example
@@ -188,3 +204,22 @@ In another terminal record via trace-cmd:
 #+begin_example
 sudo trace-cmd record -p function_graph -g __x64_sys_bpf
 #+end_example
+
+Run the failing command:
+#+begin_example
+sudo ./xdp_redirect_cpu -F --dev mlx5p1 --q 1024 --cpu 4 --prog xdp_cpu_map0
+libbpf: Error in bpf_create_map_xattr(cpu_map):ERROR: strerror_r(-524)=22(-524). Retrying without BTF.
+libbpf: map 'cpu_map': failed to create: ERROR: strerror_r(-524)=22(-524)
+libbpf: failed to load object './xdp_redirect_cpu_kern.o'
+#+end_example
+
+Viewing the result via:
+#+begin_example
+trace-cmd report | less
+#+end_example
+
+In general there is way too much data. Thus it is hard to use for anything.
+Given I manually found this was related to =map_check_no_btf=, it is
+possible to search for "map_check_no_btf" and indirectly see that it fails
+as the code calls =btf_put()=.
+
