--- a/areas/core/BTF_02_proposed_usage.org
+++ b/areas/core/BTF_02_proposed_usage.org
@@ -135,7 +135,7 @@ $ git whatchanged d39aec79e5923bf984df991ffe51d4a2b7a9e746
  tools/testing/selftests/bpf/progs/test_xdp_with_devmap_helpers.c
 #+end_example
 
-* Patchset: attempt-2
+* Patchset: attempt-2: Good BTF-code example (but rejected)
 
 Rejected with unproductive argument "make no sense" [[https://lore.kernel.org/netdev/20200604174806.29130b81@carbon/][link]].
 
