Planning: Move up XDP clone+multicast and assign Hangbin
Patchset V5 is on upstream mailing list:
 [PATCHv5 bpf-next 0/3] xdp: add a new helper for dev map multicast support
 https://lore.kernel.org/netdev/20200701041938.862200-1-liuhangbin@gmail.com/

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/planning.org
+++ b/planning.org
@@ -10,7 +10,11 @@ This document tries to get an overview on who is working on what.
 ** Multiple-XDP program on a single NIC
 - Assigned: Toke
 
+** XDP clone+multicast
+- Assigned: Hangbin
+
 ** BPF-helper: Conntrack lookup
+
 - Assigned: Matt Cover <werekraken@gmail.com>
 
 ** XDP egress hook/programs
@@ -51,8 +55,6 @@ This document tries to get an overview on who is working on what.
 - Assigned: Amazon ("Jubran, Samih" <sameehj@amazon.com>)
 
 * Not being actively worked on
-** XDP clone+multicast
-- Assigned: Nobody
 
 ** XDP-data-hard-end
 - Assigned: nobody
