conference/NetDevConf2020: Slide: The page_pool allocator
Try to motivate why we introduce the page_pool memory allocator.

The hardest part is changing the driver memory model to be
compatible with XDP, which is why I created to page_pool,
to make this easier for drivers.

XDP itself is also about adding flexiblity to support
different RX memory models via xdp_mem_type, where page_pool
is just one of the supported models. But it is a little
bit out of scope for this slide.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
+++ b/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
@@ -65,10 +65,13 @@ Tricky part is *changing* driver */memory model/* to be compatible with XDP
 - Reserve tailroom for skb_shared_info and rely on build_skb() on XDP_PASS
 - Cannot allocate page fragments to support it (e.g. through napi_alloc_skb())
 - Rx buffers must be recycled to get high speed!
-* Slide: page_pool allocator							   :export:
+* Slide: The page_pool allocator                                     :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
+
+Helping drivers with API to ease transition to new memory model
+
 - page_pool design principles
 - page_pool architecture
 - page_pool APIs
